--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1976d2" />
     <meta name="description" content="BrainBoard - Student Result Management System" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" sizes="192x192" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <link
